# arcade-toolkit

./: CMakeLists.txt  LICENSE  README.md
code/include/: atk.h  atk_asset.h  atk_audio.h  atk_core.h  atk_desktop.h  atk_math.h  atk_orion.h
code/sources/: atk.c
code/sources/asset/: asset.c  image.c  model.c
code/sources/audio/: adi_core.c  adi_core.h  listener.c  sound_data.c  source.c
code/sources/core/: array.c  atk_core.c  atk_core_core.h  file.c  logger.c  memory.c  mutex.c  string.c  timer.c  vector.c
code/sources/desktop/: dsk_core.c  dsk_core.h  global.c  joystick.c  keyboard.c  mouse.c  window.c
code/sources/math/: collision.c  mat.c  mat.cpp  mth_core.c  vec.c  vec.cpp
code/sources/orion/: buffer.c  command.c  device.c  global.c  gpu.c  image.c  memory_allocator.c  memory_operation.c  orn_core.c  orn_core.h  pipeline.c  renderer.c  shader.c  surface.c  swapchain.c  sync_objects.c  texture.c  uniform.c  vulkan_filler.h  vulkan_loader.c  vulkan_loader.h  vulkan_memory.c  vulkan_memory.h  vulkan_memory_internal.h
code/test/: main.cpp
code/test/models/: colored-cube.ply
code/test/shaders/: cube.vert  cube_textured.frag  cube_textured.vert  cube_textured_frag.spv  cube_textured_vert.spv  cube_vert.spv  instance_rendering.vert  instance_rendering_vert.spv
